--- a/src/heitezy/reestr/mainUI.form
+++ b/src/heitezy/reestr/mainUI.form
@@ -25,7 +25,7 @@
           <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Copyrights - Heitezy 2019"/>
+          <text value="Copyrights (C) Heitezy 2019"/>
         </properties>
       </component>
       <component id="a4607" class="javax.swing.JButton" binding="personNameButton" default-binding="true">
