--- a/src/main/java/heitezy/reestr/MainWindow.form
+++ b/src/main/java/heitezy/reestr/MainWindow.form
@@ -17,7 +17,7 @@
           <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Удалить ненужные файлы после конвертации"/>
+          <text value="Видалити непотрібні файли після конвертації"/>
         </properties>
       </component>
       <component id="84925" class="javax.swing.JLabel">
@@ -33,8 +33,8 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Уполномоченое лицо"/>
-          <toolTipText value="Фамилия и инициалы уполномоченого лица."/>
+          <text value="Уповноважена особа"/>
+          <toolTipText value="Прізвище та ініціали уповноваженої особи."/>
         </properties>
       </component>
       <component id="cc34" class="javax.swing.JButton" binding="organizationButton" default-binding="true">
@@ -42,8 +42,8 @@
           <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Название юр. лица"/>
-          <toolTipText value="Полное название, как в примере для заполнения."/>
+          <text value="Назва юр. особи"/>
+          <toolTipText value="Повна назва, як в прикладі для заповнення."/>
         </properties>
       </component>
       <component id="2bb8" class="javax.swing.JButton" binding="signButton" default-binding="true">
@@ -51,8 +51,8 @@
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Скан штампа с подписью"/>
-          <toolTipText value="Отсканированый штамп аптеки с подписью уполномоченого лица."/>
+          <text value="Скан штампа з підписом"/>
+          <toolTipText value="Відсканований штамп аптеки з підписом уповноваженої особи."/>
         </properties>
       </component>
       <component id="d8a5a" class="javax.swing.JButton" binding="convertButton" default-binding="true">
@@ -60,7 +60,7 @@
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Конвертировать"/>
+          <text value="Конвертувати"/>
         </properties>
       </component>
       <component id="697ae" class="javax.swing.JButton" binding="exitButton" default-binding="true">
@@ -68,7 +68,7 @@
           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Выйти"/>
+          <text value="Вийти"/>
         </properties>
       </component>
       <component id="141a2" class="javax.swing.JTextField" binding="outputPath">
@@ -86,8 +86,8 @@
           <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Папка для сохранения"/>
-          <toolTipText value="Папка. в которую будут сохранены готовые реестры."/>
+          <text value="Тека для збереження"/>
+          <toolTipText value="Тека, в яку будуть збережені готові реєстри."/>
         </properties>
       </component>
       <component id="6c804" class="javax.swing.JButton" binding="browseInputPath">
@@ -95,8 +95,8 @@
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Папка с файлами"/>
-          <toolTipText value="Папка, из которой будут браться реестры для конвертации."/>
+          <text value="Тека з файлами"/>
+          <toolTipText value="Тека, з якої будуть братися реєстри для конвертації."/>
         </properties>
       </component>
       <component id="728fc" class="javax.swing.JTextField" binding="inputPath">
